# xiaozhi-esp32

./: sdkconfig.defaults  sdkconfig.defaults.esp32s3
docs/: camera-migration-guide.md  camera-switch-functionality.md  mcp-camera-control.md  mcp-usage.md  s3cam-configuration-examples.md
main/: CMakeLists.txt  Kconfig.projbuild  application.cc  application.h  background_task.cc  components.cc  components.h  idf_component.yml  main.cc
main/ai/: ai.cc  ai.h  ai_content.cc  ai_content.h  ai_controller.cc  ai_controller.h
main/assets/en-US/: language.json
main/assets/html/: ai.html  audio_control.html  device_config.html  index.html  location.html  motor.html  move.html  servo_control.html  settings.html  vehicle.html  vision.html
main/assets/html/css/: ai.css  audio_control.css  bootstrap.min.css  common.css  device_config.css  index.css  location.css  main.css  move.css  servo_control.css  vehicle.css  vision.css
main/assets/html/js/: ai-chat.js  ai.js  api_client.js  audio_control.js  bootstrap.bundle.min.js  camera-module.js  common.js  device_config.js  index.js  location-module.js  location.js  main.js  move.js  servo_control.js  settings-module.js  vehicle.js  vision.js
main/assets/ja-JP/: language.json
main/assets/locales/en-US/: language.json
main/assets/locales/ja-JP/: language.json
main/assets/locales/zh-CN/: language.json
main/assets/locales/zh-TW/: language.json
main/assets/zh-CN/: language.json
main/assets/zh-TW/: language.json
main/audio/: audio_service.cc
main/audio_codecs/: es8374_audio_codec.h
main/audio_processing/: no_wake_word.cc
main/boards/atoms3r-cam-m12-echo-base/: atoms3r_cam_m12_echo_base.cc
main/boards/bread-compact-wifi/: README.md  compact_wifi_board.cc  config.h
main/boards/bread-compact-wifi-lcd/: README.md  compact_wifi_board_lcd.cc  config.h  config.json
main/boards/bread-compact-wifi-s3cam/: README.md  compact_wifi_board_s3cam.cc  config.h  config.json
main/boards/common/: board.cc  board.h  board_config.cc  board_config.h  camera.h  esp32_camera.cc  esp32_camera.h
main/boards/esp-hi/: adc_pdm_audio_codec.cc  config.json
main/boards/m5stack-tab5/: tab5_audio_codec.cc
main/camera/: CMakeLists.txt  README.md  camera_components.cc  camera_components.h  camera_resource_manager.cc  camera_resource_manager.h  enhanced_esp32_camera.cc  enhanced_esp32_camera.h  mcp_camera_tools.cc  mcp_camera_tools.h  vision_integration.cc  vision_integration.h
main/ext/: hw178.c  hw178.cc  lu9685.c  lu9685.cc  multiplexer.c  multiplexer.cc  pca9548a.c  pca9548a.cc  pcf8575.c  pcf8575.cc
main/ext/include/: hw178.h  i2c_utils.h  lu9685.h  multiplexer.h  pca9548a.h  pcf8575.h
main/hardware/: API_REFERENCE.md  CONFIGURATION_GUIDE.md  QUICK_START.md  README.md  TROUBLESHOOTING.md  hardware_config.json  hardware_config_example.json  hardware_config_minimal.json  hardware_config_robot.json  hardware_config_sensors_only.json  hardware_manager.cc  hardware_manager.h  simple_error_handler.cc  simple_error_handler.h
main/iot/: thing.cc  thing.h  thing_manager.cc  thing_manager.h
main/iot/things/: cam.cc  cam.h  imu.cc  imu.h  light.cc  light.h  motor.cc  motor.h  servo.cc  servo.h  us.cc  us.h
main/location/: location.cc  location.h  location_content.cc  location_content.h  location_controller.cc  location_controller.h
main/motor/: motor_content.cc  motor_content.h  motor_controller.cc  motor_controller.h
main/move/: move_content.cc  move_content.h  move_controller.cc  move_controller.h
main/vehicle/: vehicle.cc  vehicle.h  vehicle_content.cc  vehicle_content.h  vehicle_controller.cc  vehicle_controller.h
main/vision/: vision.cc  vision.h  vision_content.cc  vision_content.h  vision_controller.cc  vision_controller.h
main/web/: api.cc  api.h  api_definitions.h  api_handlers.cc  api_handlers.h  api_router.cc  html_content.cc  html_content.h  web.cc  web.h  web_content.cc  web_content.h  web_server.cc  web_server.h
